--- a/src/components/categoryitem.css
+++ b/src/components/categoryitem.css
@@ -1,6 +1,20 @@
-@media only screen and (max-width:540px) {
+@media only screen and (max-width:660px) {
     
     .mobile-categoryitem {
        flex: auto;
+
+      min-width : 100vw;
+       
     }
   }
+
+  @media only screen and (max-width:400px) {
+    
+   .mobile-categoryitem {
+      flex: auto;
+
+     min-width : 100vw;
+     margin: 0px;
+      
+   }
+ }
